[2:49 am, 09/07/2020] Anu07: splash changed app icon chnaged/ [2:50 am, 09/07/2020] Anu07: placeholder chnaged [2:59 am, 09/07/2020] Anu07: Settings activity added Removed Id from detail screen/ Interstitial added, but not showing

--- a/app/src/main/res/layout/recycler_row.xml
+++ b/app/src/main/res/layout/recycler_row.xml
@@ -45,5 +45,18 @@
             android:drawablePadding="@dimen/_4sdp"
             android:text="Share on Whatsapp"
             android:textSize="@dimen/_8ssp" />
+
+
+        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/adViewNews"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/whatsappShare"
+            android:background="@android:color/white"
+            ads:adSize="SMART_BANNER"
+            android:visibility="gone"
+            ads:adUnitId="ca-app-pub-5555315701324132/6726239696">
+            <!--                ads:adUnitId="ca-app-pub-5555315701324132/5557646184">-->
+        </com.google.android.gms.ads.AdView>
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
