--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,17 +9,15 @@
         android:id="@+id/rvSplash"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimary"
         android:elevation="@dimen/_5sdp"
         android:visibility="visible">
 
         <ImageView
-            android:id="@+id/imageview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_margin="@dimen/_60sdp"
-            android:src="@drawable/splashlogo" />
+            android:layout_width="match_parent"
+            android:src="@drawable/splash_rev"
+             android:adjustViewBounds="true"
+            android:scaleType="fitXY"
+            android:layout_height="match_parent"/>
 
     </RelativeLayout>
 
@@ -41,24 +39,27 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:elevation="@dimen/_10sdp"
+                android:weightSum="2"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/imgDrawer"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_margin="@dimen/_3sdp"
+                    android:layout_weight="0.3"
                     android:background="@color/colorPrimary"
                     android:padding="@dimen/_10sdp"
                     android:src="@drawable/ic_baseline_menu_white" />
 
                 <EditText
                     android:id="@+id/edSearch"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_margin="@dimen/_5sdp"
+                    android:layout_weight="1.6"
                     android:background="@drawable/edit_text_selector"
                     android:hint="@string/search_news"
                     android:imeOptions="actionDone"
@@ -66,6 +67,12 @@
                     android:singleLine="true"
                     android:textColorHint="#000000"
                     android:textSize="@dimen/_12ssp" />
+                <ImageView android:id="@+id/settingsImg"
+                    android:layout_width="wrap_content"
+                    android:layout_weight="0.1"
+                    android:src="@drawable/ic_baseline_settings"
+                    android:layout_margin="@dimen/_3sdp"
+                    android:layout_height="match_parent"/>
 
             </LinearLayout>
 
@@ -131,7 +138,7 @@
                 android:layout_height="match_parent"
                 android:elevation="@dimen/_5sdp"
                 android:orientation="vertical"
-                android:paddingTop="@dimen/_10sdp">
+                android:paddingTop="@dimen/_30sdp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -153,11 +160,17 @@
                         android:gravity="center_vertical"
                         android:padding="@dimen/_3sdp"
                         android:text="Khabriya"
+                        android:textStyle="bold"
                         android:textColor="@android:color/white"
-                        android:textSize="@dimen/_12sdp" />
+                        android:textSize="@dimen/_15sdp" />
 
                 </LinearLayout>
 
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_marginLeft="@dimen/_15sdp"
+                    android:background="@color/grey"
+                    android:layout_height="1dp"/>
                 <TextView
                     android:id="@+id/txtLatest"
                     android:layout_width="match_parent"
