--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -16,17 +16,56 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+
+
+            <RelativeLayout
+                android:id="@+id/backTool"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimary"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/backTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_margin="@dimen/_5sdp"
+                    android:drawableLeft="@drawable/ic_baseline_arrow_back"
+                    android:fontFamily="@font/regular"
+                    android:padding="@dimen/_8sdp"
+                    android:textColor="#ffffff"
+                    android:textSize="@dimen/_12ssp"
+                    android:visibility="visible" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_gravity="center"
+                    android:layout_margin="@dimen/_5sdp"
+                    android:fontFamily="@font/bold"
+                    android:gravity="center"
+                    android:padding="@dimen/_8sdp"
+                    android:text="@string/app_name"
+                    android:textColor="#ffffff"
+                    android:textSize="@dimen/_15ssp"
+                    android:visibility="visible" />
+            </RelativeLayout>
+
+
             <FrameLayout
                 android:id="@+id/topFrame"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_below="@id/backTool">
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/floating_action_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom|right"
-                    android:layout_marginRight="10dp"
+                    android:layout_marginRight="@dimen/_10sdp"
                     android:clickable="true"
                     android:src="@android:drawable/ic_menu_share"
                     app:backgroundTint="@color/colorPrimary"
@@ -36,29 +75,9 @@
                 <ImageView
                     android:id="@+id/image"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:layout_marginBottom="30dp"
-                    android:scaleType="centerCrop" />
+                    android:layout_height="@dimen/_180sdp"
+                    android:layout_marginBottom="@dimen/_20sdp" />
 
-                <LinearLayout
-                    android:id="@+id/backTool"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:gravity="top|start"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/backTv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="25dp"
-                        android:drawableLeft="@drawable/ic_baseline_arrow_back"
-                        android:padding="17dp"
-                        android:textColor="#ffffff"
-                        android:textSize="15sp"
-                        android:visibility="visible" />
-                </LinearLayout>
 
             </FrameLayout>
 
@@ -67,6 +86,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/topFrame"
+                android:fontFamily="@font/regular"
                 android:gravity="center"
                 android:padding="10dp"
                 android:textAlignment="center"
@@ -93,6 +113,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/regular"
                         android:text="Published on : "
                         android:textColor="@color/grey"
                         android:textSize="12dp" />
@@ -101,6 +122,7 @@
                         android:id="@+id/posted_by_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/regular"
                         android:textColor="@color/grey"
                         android:textSize="12dp" />
                 </LinearLayout>
@@ -117,6 +139,7 @@
                         android:id="@+id/category_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/regular"
                         android:textColor="@color/grey"
                         android:textSize="12dp" />
 
@@ -126,6 +149,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="10dp"
+                        android:fontFamily="@font/regular"
                         android:textColor="@color/grey"
                         android:textSize="12dp" />
                 </LinearLayout>
@@ -151,6 +175,7 @@
                 android:layout_marginBottom="6dp"
                 android:background="#CCFFFFFF"
                 android:ellipsize="end"
+                android:fontFamily="@font/regular"
                 android:gravity="top"
                 android:lineSpacingExtra="5dp"
                 android:paddingLeft="5dp"
@@ -168,6 +193,7 @@
                 android:layout_marginTop="6dp"
                 android:layout_marginRight="12dp"
                 android:layout_marginBottom="6dp"
+                android:fontFamily="@font/regular"
                 android:text="You may like"
                 android:textAllCaps="true"
                 android:textColor="@color/darkgrey"
@@ -181,10 +207,10 @@
                 android:layout_below="@+id/alsoRead"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
-                android:visibility="gone"
                 android:layout_marginRight="10dp"
                 android:background="@drawable/black_drawable_corner"
                 android:orientation="horizontal"
+                android:visibility="gone"
                 android:weightSum="2">
 
                 <TextView
@@ -194,6 +220,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1.5"
                     android:ellipsize="end"
+                    android:fontFamily="@font/regular"
                     android:gravity="center_vertical"
                     android:maxLength="100"
                     android:textColor="@android:color/black" />
@@ -210,14 +237,14 @@
                 android:id="@+id/alsoLayout1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
-
                 android:layout_below="@+id/alsoLayout"
+
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
                 android:background="@drawable/black_drawable_corner"
                 android:orientation="horizontal"
+                android:visibility="gone"
                 android:weightSum="2">
 
                 <TextView
@@ -227,6 +254,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1.5"
                     android:ellipsize="end"
+                    android:fontFamily="@font/regular"
                     android:gravity="center_vertical"
                     android:maxLength="100"
                     android:textColor="@android:color/black" />
@@ -244,13 +272,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/alsoLayout1"
-                android:visibility="gone"
-
                 android:layout_marginLeft="10dp"
+
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
                 android:background="@drawable/black_drawable_corner"
                 android:orientation="horizontal"
+                android:visibility="gone"
                 android:weightSum="2">
 
                 <TextView
@@ -260,6 +288,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1.5"
                     android:ellipsize="end"
+                    android:fontFamily="@font/regular"
                     android:gravity="center_vertical"
                     android:maxLength="100"
                     android:textColor="@android:color/black" />
@@ -277,13 +306,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/alsoLayout2"
-                android:visibility="gone"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="50dp"
                 android:background="@drawable/black_drawable_corner"
                 android:orientation="horizontal"
+                android:visibility="gone"
                 android:weightSum="2">
 
                 <TextView
@@ -293,6 +322,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1.5"
                     android:ellipsize="end"
+                    android:fontFamily="@font/regular"
                     android:gravity="center_vertical"
                     android:maxLength="100"
                     android:textColor="@android:color/black" />
@@ -337,6 +367,20 @@
         ads:adUnitId="ca-app-pub-5555315701324132/7739481617">
         <!--                ads:adUnitId="ca-app-pub-5555315701324132/7739481617">-->
     </com.google.android.gms.ads.AdView>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/scrollTop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="@dimen/_5sdp"
+        android:layout_marginStart="@dimen/_15sdp"
+        android:layout_marginTop="@dimen/_65sdp"
+        android:clickable="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:src="@android:drawable/arrow_up_float"
+        app:backgroundTint="@color/appColorTransparent" />
+
 
     <RelativeLayout
         android:id="@+id/progress_layout"
