--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,33 +5,38 @@
     android:layout_height="match_parent"
     android:animateLayoutChanges="true">
 
-    <FrameLayout
+    <RelativeLayout
         android:id="@+id/rvSplash"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/colorPrimary"
         android:elevation="@dimen/_5sdp"
         android:visibility="visible">
 
-        <ImageView android:id="@+id/splash_iv"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+        <ImageView
+            android:id="@+id/splash_iv"
+            android:layout_width="@dimen/_120sdp"
+            android:layout_height="@dimen/_150sdp"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center"
             android:adjustViewBounds="true"
-            android:scaleType="fitXY"
-            android:src="@drawable/splash_rev" />
+            android:src="@mipmap/no_bg_logo" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@id/splash_iv"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/_50sdp"
+            android:fontFamily="@font/bold"
+            android:gravity="bottom"
             android:text="Made in India"
             android:textColor="@android:color/white"
             android:textSize="@dimen/_12ssp"
-            android:typeface="sans"
-            android:gravity="bottom"
-            android:layout_marginBottom="@dimen/_8sdp"
-            android:layout_gravity="center_horizontal|bottom"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:typeface="sans" />
 
-    </FrameLayout>
+    </RelativeLayout>
 
     <androidx.drawerlayout.widget.DrawerLayout
         android:id="@+id/drawer"
@@ -75,6 +80,7 @@
                     android:background="@drawable/edit_text_selector"
                     android:hint="@string/search_news"
                     android:imeOptions="actionDone"
+                    android:fontFamily="@font/regular"
                     android:padding="@dimen/_10sdp"
                     android:singleLine="true"
                     android:textColorHint="#000000"
@@ -120,6 +126,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
+                            android:fontFamily="@font/regular"
                             android:text="@string/no_data_available"
                             android:textSize="@dimen/_12sdp" />
 
@@ -173,7 +180,8 @@
                         android:elevation="@dimen/_5sdp"
                         android:gravity="center_vertical"
                         android:padding="@dimen/_3sdp"
-                        android:text="Khabriya"
+                        android:fontFamily="@font/regular"
+                        android:text="@string/app_name"
                         android:textColor="@android:color/white"
                         android:textSize="@dimen/_15sdp"
                         android:textStyle="bold" />
@@ -196,7 +204,8 @@
                     android:elevation="@dimen/_5sdp"
                     android:gravity="center_vertical"
                     android:padding="@dimen/_3sdp"
-                    android:text="Latest News"
+                    android:fontFamily="@font/regular"
+                    android:text="@string/latest_news"
                     android:textColor="@android:color/white"
                     android:textSize="@dimen/_12sdp" />
 
