--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerInParent="true"
-            android:scaleType="centerCrop" />
+            android:background="@color/grey" />
 
         <RelativeLayout
             android:id="@+id/layout"
@@ -39,10 +39,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
+                android:fontFamily="@font/regular"
                 android:background="@color/colorPrimary"
                 android:padding="@dimen/_6sdp"
                 android:textColor="#fff"
-                android:textSize="@dimen/_10ssp"
+                android:textSize="@dimen/_12ssp"
                 android:textStyle="bold" />
         </RelativeLayout>
 
@@ -54,6 +55,7 @@
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:maxLength="100"
+        android:fontFamily="@font/regular"
         android:padding="@dimen/_8sdp"
         android:textColor="#000000"
         android:textSize="@dimen/_14ssp"
@@ -64,6 +66,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/_5sdp"
+        android:fontFamily="@font/regular"
         android:drawableRight="@drawable/ic_whatapp"
         android:drawablePadding="@dimen/_5sdp"
         android:gravity="center"
