--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:background="@color/colorPrimary"
         android:elevation="@dimen/_5sdp"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <ImageView
             android:id="@+id/splash_iv"
@@ -20,7 +20,7 @@
             android:layout_centerInParent="true"
             android:layout_gravity="center"
             android:adjustViewBounds="true"
-            android:src="@mipmap/no_bg_logo" />
+            android:src="@drawable/new_splas" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -64,7 +64,10 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="@dimen/_3sdp"
+                    android:layout_marginStart="@dimen/_3sdp"
+                    android:layout_marginTop="@dimen/_3sdp"
+                    android:layout_marginEnd="@dimen/_3sdp"
+                    android:layout_marginBottom="@dimen/_3sdp"
                     android:layout_weight="0.3"
                     android:background="@color/colorPrimary"
                     android:padding="@dimen/_10sdp"
@@ -75,12 +78,15 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_margin="@dimen/_5sdp"
+                    android:layout_marginStart="@dimen/_3sdp"
+                    android:layout_marginTop="@dimen/_3sdp"
+                    android:layout_marginEnd="@dimen/_3sdp"
+                    android:layout_marginBottom="@dimen/_3sdp"
                     android:layout_weight="1.6"
                     android:background="@drawable/edit_text_selector"
+                    android:fontFamily="@font/regular"
                     android:hint="@string/search_news"
                     android:imeOptions="actionDone"
-                    android:fontFamily="@font/regular"
                     android:padding="@dimen/_10sdp"
                     android:singleLine="true"
                     android:textColorHint="#000000"
@@ -90,11 +96,25 @@
                     android:id="@+id/settingsImg"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_margin="@dimen/_3sdp"
+                    android:layout_marginStart="@dimen/_3sdp"
+                    android:layout_marginTop="@dimen/_3sdp"
+                    android:layout_marginEnd="@dimen/_3sdp"
+                    android:layout_marginBottom="@dimen/_3sdp"
                     android:layout_weight="0.1"
                     android:src="@drawable/ic_baseline_settings" />
 
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/txtSearchTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_5sdp"
+                android:padding="@dimen/_5sdp"
+                android:text="Search Result for 'COVID'"
+                android:textSize="@dimen/_12ssp"
+                android:visibility="gone" />
+
 
             <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                 android:id="@+id/swRefresh"
@@ -127,18 +147,65 @@
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
                             android:fontFamily="@font/regular"
-                            android:text="@string/no_data_available"
+                            android:text="@string/loading"
                             android:textSize="@dimen/_12sdp" />
 
                     </RelativeLayout>
-
 
                     <ProgressBar
                         android:id="@+id/progress"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/_50sdp"
                         android:layout_gravity="center"
-                        android:padding="@dimen/_10sdp" />
+                        android:padding="@dimen/_10sdp"
+                        android:visibility="gone" />
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/colorPrimaryDark"
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:id="@+id/llNews"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="center">
+
+                            <TextView
+                                android:id="@+id/txtNews"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:gravity="center"
+                                android:padding="@dimen/_10sdp"
+                                android:text="News"
+                                android:textColor="@color/white"
+                                android:textSize="@dimen/_12ssp" />
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:id="@+id/llLiveTv"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="center">
+
+                            <TextView
+                                android:id="@+id/txtLiveTV"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:gravity="center"
+                                android:padding="@dimen/_10sdp"
+                                android:text="Live TV"
+                                android:textColor="@color/white"
+                                android:textSize="@dimen/_12ssp" />
+                        </LinearLayout>
+                    </LinearLayout>
 
                 </LinearLayout>
 
@@ -178,9 +245,9 @@
                         android:layout_height="?actionBarSize"
                         android:layout_marginStart="@dimen/_6sdp"
                         android:elevation="@dimen/_5sdp"
+                        android:fontFamily="@font/regular"
                         android:gravity="center_vertical"
                         android:padding="@dimen/_3sdp"
-                        android:fontFamily="@font/regular"
                         android:text="@string/app_name"
                         android:textColor="@android:color/white"
                         android:textSize="@dimen/_15sdp"
@@ -202,9 +269,9 @@
                     android:layout_marginTop="@dimen/_5sdp"
                     android:layout_marginBottom="@dimen/_3sdp"
                     android:elevation="@dimen/_5sdp"
+                    android:fontFamily="@font/regular"
                     android:gravity="center_vertical"
                     android:padding="@dimen/_3sdp"
-                    android:fontFamily="@font/regular"
                     android:text="@string/latest_news"
                     android:textColor="@android:color/white"
                     android:textSize="@dimen/_12sdp" />
