--- a/app/src/main/res/layout/activity_tv_streaming.xml
+++ b/app/src/main/res/layout/activity_tv_streaming.xml
@@ -23,7 +23,7 @@
     <TextView
         android:id="@+id/backTv"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="?actionBarSize"
         android:layout_alignParentLeft="true"
         android:layout_margin="@dimen/_5sdp"
         android:drawableLeft="@drawable/ic_baseline_arrow_back"
