--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -75,6 +75,7 @@
                 <ImageView
                     android:id="@+id/image"
                     android:layout_width="match_parent"
+                    android:scaleType="fitCenter"
                     android:layout_marginTop="@dimen/_minus5sdp"
                     android:layout_height="@dimen/_180sdp"
                     android:layout_marginBottom="@dimen/_20sdp" />
@@ -164,8 +165,6 @@
 <!--                        android:textColor="@color/grey"-->
 <!--                        android:textSize="12dp" />-->
                 </LinearLayout>
-
-
             </RelativeLayout>
 
             <WebView
