--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,11 +37,10 @@
                     android:layout_marginEnd="@dimen/_3sdp"
                     android:layout_marginBottom="@dimen/_3sdp"
                     android:layout_weight="0.3"
-                    android:background="@color/colorPrimary"
-                    android:padding="@dimen/_10sdp"
+                    android:padding="@dimen/_6sdp"
                     android:src="@drawable/ic_baseline_menu_white" />
 
-                <EditText
+                <TextView
                     android:id="@+id/edSearch"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -55,7 +54,7 @@
                     android:fontFamily="@font/regular"
                     android:hint="@string/search_news"
                     android:imeOptions="actionDone"
-                    android:padding="@dimen/_10sdp"
+                    android:padding="@dimen/_8sdp"
                     android:singleLine="true"
                     android:textColorHint="#000000"
                     android:textSize="@dimen/_12ssp" />
@@ -64,7 +63,8 @@
                     android:id="@+id/settingsImg"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:padding="@dimen/_5sdp"
+                    android:padding="@dimen/_8sdp"
+
                     android:layout_marginStart="@dimen/_3sdp"
                     android:layout_marginTop="@dimen/_3sdp"
                     android:layout_marginEnd="@dimen/_3sdp"
@@ -131,6 +131,7 @@
 
 
                     <include layout="@layout/layout_bottom" />
+
                 </LinearLayout>
 
             </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
@@ -140,7 +141,7 @@
         <com.google.android.material.navigation.NavigationView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_gravity="start"
+            android:layout_gravity="end"
             android:background="@color/colorPrimary"
             android:fitsSystemWindows="true">
 
@@ -162,7 +163,7 @@
                         android:layout_width="@dimen/_25sdp"
                         android:layout_height="@dimen/_25sdp"
                         android:layout_margin="@dimen/_5sdp"
-                        android:src="@drawable/splashlogo" />
+                        android:src="@drawable/new_splas" />
 
                     <TextView
                         android:layout_width="match_parent"
