--- a/app/src/main/res/layout/activity_genre_preference.xml
+++ b/app/src/main/res/layout/activity_genre_preference.xml
@@ -1,41 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
-<ProgressBar android:id="@+id/pref_loader"
-    android:layout_width="wrap_content"
-    android:progressTint="@color/textPrimaryColor"
-    android:layout_centerInParent="true"
-    android:layout_height="wrap_content"/>
+    <ProgressBar
+        android:id="@+id/pref_loader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:progressTint="@color/textPrimaryColor" />
+
     <TextView
         android:id="@+id/headerText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginRight="@dimen/_10sdp"
+        android:layout_marginBottom="@dimen/_10sdp"
         android:gravity="center"
         android:lineSpacingMultiplier="1.2"
-        android:textSize="@dimen/_18ssp"
-        android:textStyle="bold"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:layout_marginBottom="@dimen/_10sdp"
-        android:layout_marginLeft="@dimen/_10sdp"
-         android:layout_marginRight="@dimen/_10sdp"
         android:text="Choose Newsfeed, Languages and Categories"
-        android:textColor="@color/colorPrimary" />
+        android:textColor="@color/colorPrimary"
+        android:textSize="@dimen/_18ssp"
+        android:textStyle="bold" />
 
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/pref_cate_grid"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/headerText"
         android:layout_marginLeft="@dimen/_10sdp"
         android:layout_marginRight="@dimen/_10sdp"
-        app:spanCount="2"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        app:spanCount="2" />
 
-    <Button android:id="@+id/savePrefs"
+    <Button
+        android:id="@+id/savePrefs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
