--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,56 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.SearchView android:id="@+id/searchView"
+    <!--    <androidx.appcompat.widget.SearchView android:id="@+id/searchView"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--         app:iconifiedByDefault="true"-->
+    <!--        app:queryHint="Search News"-->
+    <!--        android:layout_height="wrap_content"/>-->
+    <!--    <requestFocus/>-->
+
+    <LinearLayout
+        android:id="@+id/llActionBar"
         android:layout_width="match_parent"
-         app:iconifiedByDefault="true"
-        app:queryHint="Search News"
-        android:layout_height="wrap_content"/>
-    <requestFocus/>
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="@color/white"
+        android:elevation="@dimen/_10sdp"
+        android:orientation="horizontal"
+        android:weightSum="2">
+
+        <ImageView
+            android:id="@+id/imgClose"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="@dimen/_3sdp"
+            android:layout_marginTop="@dimen/_3sdp"
+            android:layout_marginEnd="@dimen/_3sdp"
+            android:layout_marginBottom="@dimen/_3sdp"
+            android:layout_weight="0.3"
+            android:padding="@dimen/_10sdp"
+            android:src="@drawable/ic_baseline_arrow_back_black" />
+
+        <EditText
+            android:id="@+id/edSearch"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="@dimen/_3sdp"
+            android:layout_marginTop="@dimen/_3sdp"
+            android:layout_marginEnd="@dimen/_3sdp"
+            android:layout_marginBottom="@dimen/_3sdp"
+            android:layout_weight="1.6"
+            android:background="@drawable/edit_text_selector"
+            android:fontFamily="@font/regular"
+            android:hint="@string/search_news"
+            android:imeOptions="actionDone"
+            android:padding="@dimen/_10sdp"
+            android:singleLine="true"
+            android:textColorHint="#000000"
+            android:textSize="@dimen/_12ssp" />
+
+
+    </LinearLayout>
+
 
     <TextView
         android:id="@+id/txtSearchTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/llActionBar"
         android:layout_marginStart="@dimen/_5sdp"
-        android:layout_below="@+id/searchView"
         android:padding="@dimen/_5sdp"
         android:text="Search Result for 'COVID'"
         android:textSize="@dimen/_12ssp"
         android:visibility="gone" />
 
-    <ProgressBar android:id="@+id/progressSearch"
+    <ProgressBar
+        android:id="@+id/progressSearch"
         android:layout_width="wrap_content"
-        android:progressTint="@color/textPrimaryColor"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:visibility="gone"
-        android:layout_height="wrap_content"/>
+        android:elevation="@dimen/_5sdp"
+        android:progressTint="@color/textPrimaryColor"
+        android:visibility="gone" />
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/txtSearchTitle"
-        android:layout_weight="1">
+        android:orientation="vertical">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/news_recycler_view"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#ffffff"
-            android:scrollbars="vertical" />
+            android:layout_weight="1">
 
-        <TextView
-            android:id="@+id/txtError"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:fontFamily="@font/regular"
-            android:text="@string/loading"
-            android:textSize="@dimen/_12sdp" />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/news_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#ffffff"
+                android:scrollbars="vertical" />
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/txtError"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:fontFamily="@font/regular"
+                android:text="@string/loading"
+                android:textSize="@dimen/_12sdp"
+                android:visibility="gone" />
+
+        </RelativeLayout>
+
+        <ProgressBar
+            android:id="@+id/progress"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_50sdp"
+            android:layout_gravity="center"
+            android:padding="@dimen/_10sdp"
+            android:visibility="gone" />
+
+
+    </LinearLayout>
 
 </RelativeLayout>
