--- a/app/src/main/res/layout/item_genre.xml
+++ b/app/src/main/res/layout/item_genre.xml
@@ -1,36 +1,43 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="@dimen/_5sdp"
+<?xml version="1.0" encoding="utf-8"?><!--<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    android:layout_width="match_parent"-->
+<!--    app:cardCornerRadius="@dimen/_5sdp"-->
+<!--    android:layout_margin="@dimen/_3sdp"-->
+<!--    android:elevation="@dimen/_5sdp"-->
+<!--    android:layout_height="wrap_content">-->
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="@dimen/_3sdp"
-    android:elevation="@dimen/_5sdp"
-    android:layout_height="wrap_content">
+    android:background="@drawable/bg_primary_round"
+    android:gravity="center"
+    android:orientation="horizontal"
+    android:padding="@dimen/_5sdp">
 
-    <RelativeLayout
+    <TextView
+        android:id="@+id/item_text"
         android:layout_width="wrap_content"
-        android:background="@drawable/bg_primary_round"
         android:layout_height="wrap_content"
-        android:padding="@dimen/_5sdp">
+        android:layout_centerVertical="true"
+        android:layout_margin="@dimen/_5sdp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:padding="@dimen/_5sdp"
+        android:text="Category A"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="@dimen/_10ssp" />
 
-        <TextView
-            android:id="@+id/item_text"
-            android:layout_width="@dimen/_100sdp"
-            android:layout_height="wrap_content"
-            android:text="Category A"
-            android:gravity="center"
-            android:paddingTop="@dimen/_5sdp"
-            android:textAllCaps="false"
-            android:paddingLeft="@dimen/_5sdp"
-            android:textColor="@color/white" />
+    <androidx.appcompat.widget.AppCompatCheckBox
+        android:id="@+id/checkCategory"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/item_text"
+        android:buttonTint="@color/white"
+        android:gravity="center"
+        android:padding="@dimen/_5sdp"
+        android:text="" />
 
-        <androidx.appcompat.widget.AppCompatCheckBox
-            android:id="@+id/checkCategory"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/item_text"
-            android:buttonTint="@color/white"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:text="" />
-    </RelativeLayout>
-</androidx.cardview.widget.CardView>
+</LinearLayout><!--</androidx.cardview.widget.CardView>-->
